added swagger docs for products
