# cmd/api/productsHandler.go
@@ -10,6 +10,19 @@ import (
 	"github.com/go-chi/chi/v5"
 )
 
+// Creates a product
+//swagger:route POST /categories/{category_id}/products products createProduct
+//Consumes:
+//	- multipart/form-data
+//
+//Produces:
+//	- application/json
+//Parameters:
+//	ProductBody
+//responses:
+//	200: ProductResponse
+//swagger:response
+
 func (app *application) createProductHandler(w http.ResponseWriter, r *http.Request) {
 	product := &data.Product{}
 
@@ -81,6 +94,23 @@ func (app *application) createProductHandler(w http.ResponseWriter, r *http.Requ
 	app.sendResponse(w, response{"product": product}, http.StatusCreated)
 }
 
+// Updates a product
+// Consumes:
+//   - multipart/form-data
+//
+// Produces:
+//   - application/json
+//
+// Parameters:
+//
+//	ProductBody
+//
+// responses:
+//
+//	200: ProductResponse
+//
+//swagger:route PATCH /categories/{category_id}/products products updateProduct
+//swagger:response
 func (app *application) updateProductHandler(w http.ResponseWriter, r *http.Request) {
 	var product data.Product
 
@@ -172,6 +202,30 @@ func (app *application) updateProductHandler(w http.ResponseWriter, r *http.Requ
 	app.sendResponse(w, response{"product": product}, http.StatusCreated)
 }
 
+//Get single product
+//swagger:route GET /categories/{category_id}/products/{product_id} products GetProductItem
+//Produces:
+//	- application/json
+// Parameters:
+//	+ name: category_id
+//	in: path
+//	description: Id of category
+//	required: true
+//	type: integer
+//	format: int32
+//
+//	+ name: product_id
+//	in: path
+//	description: Id of product
+//	required: true
+//	type: integer
+//	format: int32
+
+// responses:
+//
+//	200: ProductResponse
+//
+//swagger:response
 func (app *application) getProductHandler(w http.ResponseWriter, r *http.Request) {
 	productId, err := app.convertToInt(chi.URLParam(r, "product_id"))
 	if err != nil {
@@ -206,11 +260,18 @@ func (app *application) getProductHandler(w http.ResponseWriter, r *http.Request
 }
 
 // Returns a list of products
+//
+// A list of productst
+//
+//	Consumes:
+//	- application/json
+//
+//	Produces:
+//	- application/json
+//
 // responses:
 //
 //	200: ProductsResponse
-//
-// A list of productst
 //
 //swagger:route GET /categories/{id}/products products listProducts
 //swagger:response
@@ -269,6 +330,30 @@ func (app *application) listProductHandler(w http.ResponseWriter, r *http.Reques
 	app.sendResponse(w, response{"products": products, "total": totalCount}, http.StatusOK)
 }
 
+//Delete single product
+//swagger:route DELETE /categories/{category_id}/products/{product_id} products deleteProductItem
+//Produces:
+//	- application/json
+// Parameters:
+//	+ name: category_id
+//	in: path
+//	description: Id of category
+//	required: true
+//	type: integer
+//	format: int32
+//
+//	+ name: product_id
+//	in: path
+//	description: Id of product
+//	required: true
+//	type: integer
+//	format: int32
+
+// responses:
+//
+//	204: []
+//
+//swagger:response
 func (app *application) deleteProductHandler(w http.ResponseWriter, r *http.Request) {
 	productId, err := app.convertToInt(chi.URLParam(r, "product_id"))
 	if err != nil {
